[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/environment/light_radial.png" type="Texture" id=1]
[ext_resource path="res://FX/DespawnEffect.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
gravity = Vector3( 0, -90, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color = Color( 0.439216, 0.439216, 0.439216, 1 )

[node name="DespawnEffect" type="Node2D"]
script = ExtResource( 2 )

[node name="Flash" type="Light2D" parent="."]
scale = Vector2( 0.203125, 0.21875 )
enabled = false
texture = ExtResource( 1 )
energy = 1.08

[node name="DustParticles" type="Particles2D" parent="."]
emitting = false
amount = 24
one_shot = true
preprocess = 0.65
process_material = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="EffectTimeout" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="EffectTimeout" to="." method="_on_EffectTimeout_timeout"]
